--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.1"
+    "mysql2": "^3.6.1",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "sequelize": "^6.33.0"
   }
 }
